<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107"
    tools:context=".ArtistsSearch">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/firstToolbar"
        android:background="@color/my_status_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="800dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="700dp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/artistName"
        android:layout_width="347dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/songList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInput"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/songList"
        android:layout_width="match_parent"
        android:layout_height="537dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="15dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/search"
        app:layout_constraintBottom_toTopOf="@+id/artistName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInput"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/textInput"
        style="@android:style/Widget.AutoCompleteTextView"
        android:layout_width="228dp"
        android:layout_height="48dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="10dp"
        android:ems="8"
        android:hint="@string/searchHint"
        android:inputType="text"
        android:shadowColor="@color/design_default_color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="112dp"
        android:text="@string/welcome"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>